--- a/styles/layout.css
+++ b/styles/layout.css
@@ -99,7 +99,6 @@ article img {
     outline-width: 0;
 }
 
-/*幻灯片相框*/
 #frame {
     position: absolute;
     top: 0;
@@ -115,6 +114,16 @@ article img {
 
 td {
     padding: .5em 3em;
+}
+
+th {
+    color: #edc;
+    background-color: #455;
+}
+
+tr td {
+    color: #233;
+    background-color: #eb6;
 }
 
 dl {
